GNOME Bugzilla – Bug 720311
vaapipostproc: fix output buffer to have a GstVaapiVideoMemory
Last modified: 2014-08-22 16:53:49 UTC
Two options to fix this issue: (i) create output buffers, i.e. create_output_buffer(), from a GstVaapiVideoBufferPool object possibly obtained from the src pad, or (ii) attach a regular GstVaapiVideoMemory object to the newly created buffer. Purpose: allow src pad (output) buffers to be mapped through the GstVideoMeta APIs, to obtain raw YUV video frames, or a plain map to obtain a GstVaapiSurfaceProxy for additional custom processing.
Created attachment 279956 [details] [review] vaapipostproc: fix output buffer to have a GstVaapiVideoMemory
(In reply to comment #1) > Created an attachment (id=279956) [details] [review] > vaapipostproc: fix output buffer to have a GstVaapiVideoMemory Applied something different. In particular, factored out decide_allocation() hook, for future usages. e.g. output to raw YUV or GLTextureUploadMeta.
commit db111fe72a7ae0592f398307f95ba328e6a6be09 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Sat Jul 5 21:00:34 2014 +0300 vaapipostproc: fix output buffer to have a GstVaapiVideoMemory. https://bugzilla.gnome.org/show_bug.cgi?id=720311 [used new infrastructure through base decide_allocation() impl] Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
commit 9ee46ab32e559f1029cc0b9764006e79c3eea4dc Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Fri Aug 22 18:10:54 2014 +0200 vaapipostproc: use pooled vaapi video meta. Use pooled GstVaapiVideoMeta information, i.e. always allocate that on video buffer allocation. Also optimize copy of additional metadata info into the resulting video buffer: only copy the video cropping info and the source surface proxy. https://bugzilla.gnome.org/show_bug.cgi?id=720311 Signed-off-by: Sreerenj Balachandran <sreerenj.balachandran@intel.com> [fixed proxy leak, fixed double free on error, optimized meta copy] Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>